Fixed layout issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -115,7 +115,7 @@ a:hover {
 	border-right:1px solid #bbb;
 	margin:0 auto;
 	width:800px;
-	height:450px;
+	min-height:450px;
 }
 #content_inside_sidebar {
 	border-left:1px solid #bbb;
